# Swift-Stats

./: .gitattributes  .gitignore  README.md  Swift-Stats Folder  pyproject.toml  readme_file_list.txt  requirements.txt
docs/: filename_conventions.md  imaging_workflow.md  qpcr_workflow.md  troubleshooting.md
downstream_examples/qpcr_summary/: README.md
examples/imaging/: README.md
examples/imaging/lsm/: README.md
examples/imaging/lsm/three_channel/: del nt2 del cbd 1.lsm  lsm_example_02.lsm  lsm_example_03.lsm  lsm_example_08.lsm  mkp5 sting3.lsm  mkp5 sting4.lsm  mkp5 sting5.lsm  mkp5 sting6.lsm
examples/imaging/oir/: README.md
examples/imaging/oir/three_channel/: mkp7 bax cis 24hr 1.oir  mkp7 bax cis 24hr 1_0002.oir  oir_example_03.oir  oir_example_04.oir  oir_example_05.oir  oir_example_06.oir  oir_example_07.oir  vec cis 24hr 2.oir
examples/qpcr/fast7500/: README.md
examples/qpcr/fast7500/expected_output/: fast7500_compiled.xlsx
examples/qpcr/fast7500/input/: 20231214_sample_p08_7500fast-instr1_op4_data.xls  (+8 more)
examples/qpcr/mixed_qs5_fast7500/: README.md
examples/qpcr/qs5/: README.md
scripts/: compile_fast7500.py  compile_mixed_qpcr.py  compile_qs5.py  process_lsm.py  process_oir.py
src/swift_stats/: __init__.py
src/swift_stats/imaging/: __init__.py  channel_processing.py  lsm_reader.py  oir_reader.py
src/swift_stats/qpcr/: combined_qpcr_reader.py  fast7500_reader.py  qs5_reader.py
tests/: conftest.py  test_combined_reader.py  test_fast7500_reader.py  test_imaging_readers.py  test_qs5_reader.py
(+13 files in other folders)
